syntax = "proto3";

option java_multiple_files = true;
option java_package = "$package$.grpc";
option java_outer_classname = "ServiceProto";

package grpc;

service UserService {
    rpc AddUser (AddUserRequest) returns (AddUserResponse) {}
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
    rpc ListUser (ListUserRequest) returns (ListUserResponse) {}
}

message AddUserRequest {
    string name = 1;
    string email = 2;
}

message AddUserResponse {
    int64 id = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    UserResponse user = 1;
}

message ListUserRequest {
}

message ListUserResponse {
    repeated UserResponse users = 1;
}

message UserResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
}